--- a/Obligatorio2P2/Views/Shared/_Layout.cshtml
+++ b/Obligatorio2P2/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>Había una vez</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
@@ -27,13 +27,13 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container text-justify">
         @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+
     </div>
+    <footer class="navbar-fixed-bottom">
+        <p id="textBottom">Andrés Valle Lisboa- Federico García</p>
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
