login, navigation, logout

--- a/Obligatorio2P2/Content/Site.css
+++ b/Obligatorio2P2/Content/Site.css
@@ -34,3 +34,16 @@ footer{
 #textBottom {
     color: white;
 }
+#Catalogue, #Last10Products {
+    display: none;
+}
+
+ul {
+    list-style-type: none;
+    display: inline;
+}
+
+nav{
+    display:inline;
+}
+
