User client(to do, confirm purchase)

--- a/Obligatorio2P2/Views/Home/Index.cshtml
+++ b/Obligatorio2P2/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿<article class="row justify-content-center">
+﻿<main class="row justify-content-center">
         <form class="form-inline col-md-6" action="../Home/Login" method="post">
             Usuario<input type="text" name="user"/><br />
             Contraseña<input type="password" name="password"/><br />
             <button class="btn-primary">Iniciar sesión</button>
         </form>  
-</article>
+</main>
