--- a/Obligatorio2P2/Content/Site.css
+++ b/Obligatorio2P2/Content/Site.css
@@ -42,8 +42,23 @@ ul {
     list-style-type: none;
     display: inline;
 }
+li{
+    display:inline;
+    background-color:black;
+    color:white;
+    padding:5px;
+}
+.navButtons{
+    margin-top:10px;
+}
+
+main{
+    margin-top:20px;
+}
 
 nav{
     display:inline;
 }
-
+#commonDiv{
+    margin-top:30px;
+}
