--- a/Obligatorio2P2/Views/Client/Index.cshtml
+++ b/Obligatorio2P2/Views/Client/Index.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model ShopSystem.Purchase
 
 <!DOCTYPE html>
 
@@ -29,22 +29,23 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav">
             <ul>
-                <li id="showCatalogue">Ver Catalogo</li>
-                <li id="showPurchases">Ver últimas 10 compras y artículo más comprado</li>
-                <li id="logout"><a href="/Home/Logout">Salir</a></li>
+                <li class="navButtons" id="showCatalogue">Ver Catalogo</li>
+                <li class="navButtons" id="showPurchases">Ver últimas 10 compras y artículo más comprado</li>
+                <li class="navButtons" id="logout"><a href="/Home/Logout">Salir</a></li>
             </ul>
         </nav>        
     </header>
     <section>
         <section id="Catalogue">
-            <div>
+            <div id="Products">
                 <table class="table">
                     <tr>
                         <th>Nombre</th>
                         <th>IdProducto</th>
                         <th>Precio</th>
+                        <th>Cantidad disponible</th>
                         <th>Categoría</th>
                         <th>IdCategoría</th>
                     </tr>
@@ -56,6 +57,7 @@
                                 <td>@p.Name</td>
                                 <td>@p.Id</td>
                                 <td>@p.Price</td>
+                                <td>@p.Quantity</td>
                                 <td>@pS.Name</td>
                                 <td>@pS.StockId</td>
                             </tr>
@@ -70,12 +72,81 @@
                     cantidad<input name="quantity" type="number"/>
                     <button class="btn-primary">Agregar al carrito</button>
                 </form>
-            <div>
-
-            </div>
+                <div>
+                    @if (Session["idpurchase"] != null)
+                    {
+                        <table class="table">
+                            <tr>
+                                <th>Nombre</th>
+                                <th>Precio</th>
+                                <th>Cantidad</th>
+                            </tr>
+                            @{ 
+                                int count = Model.ProductsToBuy.Count;
+                                int totalPrice = 0;
+                            }
+                            @for(int i=0; i < count; i++)
+                            {
+                                List<ShopSystem.Product> products = Model.ProductsToBuy;
+                                int price = products[i].Price;
+                                int number = Model.GetDataProductsToBuy[i].quantity;
+                                totalPrice += price * count;
+                                <tr>
+                                    <td>@products[i].Name</td>                                
+                                    <td>@price</td>                               
+                                    <td>@number</td>
+                                </tr>
+                            }
+                            <tr>
+                                <th>Precio total</th>
+                                <th>@totalPrice</th>
+                                <td><a class="btn-link">Comprar</a></td>
+                            </tr>
+                        </table>
+                    }
+                </div>
         </section>
         <section id="Last10Products">
-
+            <div>
+                <p><b>Últimos 10 productos</b></p>
+                <table>
+                    <tr>
+                        <th>
+                            Nombre
+                        </th>
+                        <th>
+                            Cantidad
+                        </th>
+                    </tr>
+                    @{
+                        int quantity = ViewBag.products.Count;
+                    }
+                    @for(int i =0; i < quantity; i++)
+                    {
+                        <tr>
+                            <td>
+                                @ViewBag.products[i].Name
+                            </td>
+                        </tr>
+                    }
+                
+                </table>
+            </div>
+            <div>
+                <hr />
+                <p><b>Productos más comprados</b></p>
+                <table>
+                    <tr>
+                        <th>Nombre</th>
+                    </tr>
+                    @foreach(ShopSystem.Product p in ViewBag.mostBought)
+                    {
+                        <tr>
+                            <td>@p.Name</td>
+                        </tr>
+                    }
+                </table>
+            </div>
         </section>
     </section>
 </body>
