--- a/Obligatorio2P2/Views/Shared/_Layout.cshtml
+++ b/Obligatorio2P2/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <header class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -26,8 +26,8 @@
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="container text-justify">
+    </header>
+    <div  id="commonDiv" class="container text-justify">
         @RenderBody()
 
     </div>
