--- a/Obligatorio2P2/Views/Client/Index.cshtml
+++ b/Obligatorio2P2/Views/Client/Index.cshtml
@@ -45,6 +45,7 @@
                         <th>IdProducto</th>
                         <th>Precio</th>
                         <th>Cantidad disponible</th>
+                        <th>Descripción</th>
                         <th>Categoría</th>
                         <th>IdCategoría</th>
                     </tr>
@@ -57,6 +58,7 @@
                                 <td>@p.Id</td>
                                 <td>@p.Price</td>
                                 <td>@p.Quantity</td>
+                                <td>@p.Description</td>
                                 <td>@pS.Name</td>
                                 <td>@pS.StockId</td>
                             </tr>
