--- a/Obligatorio2P2/Views/Client/Index.cshtml
+++ b/Obligatorio2P2/Views/Client/Index.cshtml
@@ -28,7 +28,7 @@
 </head>
 <body>
     <header>
-        <nav">
+        <nav>
             <ul>
                 <li class="navButtons" id="showCatalogue">Ver Catalogo</li>
                 <li class="navButtons" id="showPurchases">Ver últimas 10 compras y artículo más comprado</li>
